# engineering-practices

./: .pre-commit-config.yaml  README.md  example_research_code.py  pyproject.toml
hw-1/: .pre-commit-config.yaml  example_research_code.py  linting.md
hw-2/:  README.md  dataset.csv  update_dataset.csv  update_dataset_exapmle_code.py
hw-3/: time_series_predict_example.py.dvc  train_Electric_Production.csv.dvc
hw3/: .gitignore  Electric_Production.csv.dvc  README.md  predict_Electric_Production.csv.dvc
