[tool.poetry]
name = "engineering-practices-hw-1"
version = "1.0"
description = "first homework"
authors = ["Kadyrov Rustam <rustam_kadyrov_03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^6.1.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pre-commit = "^3.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
